--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-
+    <!-- Login -->
+    <string name="login_email_hint">Email</string>
+    <string name="login_password_hint">Contraseña</string>
+    <string name="login_error">Usuario o contraseña incorrecto</string>
+    <string name="login_button_login">Log In</string>
+    <string name="login_button_register">Registro</string>
 </resources>
