--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-
+    <string name="login_email_hint">Email</string>
+    <string name="login_password_hint">Contraseña</string>
+    <string name="login_error">Usuario o contraseña incorrecto</string>
+    <string name="login_button_register">Registo</string>
+    <string name="login_button_login">Iniciar sesión</string>
 </resources>
